<resources>
    <string name="app_name">RedditApp</string>
    <string name="login">login</string>
    <string name="skip">skip</string>
    <string name="title_home">Home</string>
    <string name="title_all">All</string>
    <string name="title_popular">Popular</string>
    <string name="hot_reddites">HOT</string>
    <string name="new_reddites">NEW</string>
    <string name="top_reddites">TOP</string>
    <string name="controversial_reddites">CONTR.</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rising_reddites">RISING</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_subreddits">Error Loading Subreddits \n Tap To Refresh</string>
    <string name="share_text">Share</string>
    <string name="add_comment">Add Comment…</string>
    <string name="comments_label">Comments.</string>
    <string name="error_loading_post">Error Loading Post Details \n Tap To Refresh</string>
    <string name="save">Save</string>
    <string name="failed">Failed</string>
    <string name="voted">Vote Success</string>
    <string name="saved">Save Success</string>
    <string name="empty_string_error">Error Empty Comment</string>
    <string name="user_not_logged">User Not Login</string>
    <string name="comment_success">Comment Add Successfully</string>
    <string name="error_comment">Error While Adding Comment</string>
    <string name="user_saved">User Saved</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Posts">posts</string>
    <string name="saved_things">Saved</string>
    <string name="logout">Logout</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="reddit_saved_things">Reddit Saved Things</string>
    <string name="comment_type">t1</string>
    <string name="share_via">Share via</string>


</resources>
