<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:fillViewport="true"
    tools:context="com.hazem.redditapp.activities.PostDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">


                    <ImageView
                        android:id="@+id/post_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/logo" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:background="#40000000">

                        <ImageButton
                            android:id="@+id/open_in_new"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_open_in_new_black_24dp" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#8C000000"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/up_vote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:padding="10dp"
                                android:src="@drawable/ic_arrow_upward_wight_24dp" />

                            <TextView
                                android:id="@+id/vote_count"
                                style="@style/TextAppearance.AppCompat.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                tool:text="33.4K" />

                            <ImageButton
                                android:id="@+id/down_vote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:padding="10dp"
                                android:src="@drawable/ic_arrow_downward_wight_24dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/comments_btn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:src="@drawable/ic_comment_wight_24dp" />


                            <TextView
                                android:id="@+id/comment_count"
                                style="@style/TextAppearance.AppCompat.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                tool:text="33.4K" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/share_btn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@android:color/transparent"
                                android:src="@drawable/ic_share_wight_24dp" />


                            <TextView
                                style="@style/TextAppearance.AppCompat.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/share_text"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </LinearLayout>


                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/post_title"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:textColor="@color/primaryText"
                        android:textSize="18sp"
                        tool:text="Post Title " />

                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:text="@string/comments_label"
                        android:textColor="@color/primaryText"
                        android:textSize="18sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/comments_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/add_comment_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="top|start"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="1"
            android:scrollbars="vertical" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_load_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/error_loading_post"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:visibility="gone" />


    </LinearLayout>


</ScrollView>
